Enable Molecule tests in Bootstrap role
The ansible molecule tests allow to run unit tests to validate
the proper execution of ansible roles. This change introduces
a default scenario which validates the bootstrap role against
CentOS 7 and Ubuntu Bionic distros.

Signed-off-by: Victor Morales <v.morales@samsung.com>
Change-Id: I2c68cef82956d5113ff3a1b9ab2d6189213e1d13

--- a/playbooks/roles/bootstrap/defaults/main.yml
+++ b/playbooks/roles/bootstrap/defaults/main.yml
@@ -8,10 +8,4 @@
 # http://www.apache.org/licenses/LICENSE-2.0
 ##############################################################################
 
-extends: default
-
-ignore: |
-  .tox/
-
-rules:
-  line-length: disable
+vendor: "{{ lookup('env', 'VENDOR') | default('ericsson-pod2', True) }}"
