--- a/playbooks/roles/bootstrap/molecule/default/converge.yml
+++ b/playbooks/roles/bootstrap/molecule/default/converge.yml
@@ -8,10 +8,9 @@
 # http://www.apache.org/licenses/LICENSE-2.0
 ##############################################################################
 
-extends: default
-
-ignore: |
-  .tox/
-
-rules:
-  line-length: disable
+- name: Converge
+  hosts: all
+  gather_facts: false
+  roles:
+    - role: bootstrap
+      inventory_path: /home/kuberef/inventory
