--- a/tox.ini
+++ b/tox.ini
@@ -18,3 +18,11 @@ commands = bash -c "find {toxinidir} \
    bash -c "find {toxinidir} \
    -not -path {toxinidir}/.tox/\* \
    -name \*.rst | xargs rstcheck"
+
+[testenv:{bootstrap}]
+setenv = HOME={homedir}
+deps =
+   -r{toxinidir}/test-requirements.txt
+envdir = {toxinidir}/.tox/molecule
+changedir = {toxinidir}/playbooks/roles/{envname}
+commands = molecule --debug test
