--- a/tox.ini
+++ b/tox.ini
@@ -12,6 +12,7 @@ deps =
 whitelist_externals = bash
 commands = bash -c "find {toxinidir} \
    -not -path {toxinidir}/.tox/\* \
+   -not -path {toxinidir}/.venv/\* \
 # E006 check for lines longer than 79 columns
    -name \*.sh | xargs bashate -v -iE006"
    bash -c "yamllint {toxinidir}"
