Switch to older settings for ansible playbooks and VM creation steps
This change introduces two (older) settings needed for
CentOS 7 which were removed by recent patches that were
tested only on Ubuntu 16.04. These settings have been
already tested on Ubtunu 16.04.

Change-Id: I3039d650b59869d45e11afdda8827c850f686195
Signed-off-by: Rihab Banday <rihab.banday@ericsson.com>
Co-Authored-By: Victor Morales <v.morales@samsung.com>

--- a/playbooks/roles/jump-vm/tasks/main.yaml
+++ b/playbooks/roles/jump-vm/tasks/main.yaml
@@ -85,7 +85,7 @@
               --disk path={{ workspace }}/kuberef-jump.qcow2,format=qcow2 \
               --disk {{ workspace }}/kuberef-jump-cidata.iso,device=cdrom \
               --network network=default,model=virtio,mac='{{ jumphost.interfaces[engine.net_config[engine.public_network].interface].mac_address }}' \
-              --network bridge=pxebr,model=virtio,mac='{{ jumphost.interfaces[engine.net_config[engine.pxe_network].interface].mac_address }}' \
+              --network bridge=pxebr,model=rtl8139,mac='{{ jumphost.interfaces[engine.net_config[engine.pxe_network].interface].mac_address }}' \
               --import --noautoconsole"
 
 - name: start jump VM
