--- a/inventory/localhost.ini
+++ b/inventory/localhost.ini
@@ -1,5 +1,6 @@
 [all:vars]
 ansible_ssh_extra_args=' -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null'
+ansible_python_interpreter: '/usr/bin/python'
 
 [localhost]
 127.0.0.1 ansible_connection=local
