Updated PDF and IDF for Intel POD 19
This change updates the config files for Intel
POD 19 based on recent hardware updates. Additionally it
adds config for node 3, 4 and 5.

Change-Id: I3a8caf6c8f273567057e325ab27d65f8920ba4ad
Signed-off-by: Rihab Banday <rihab.banday@ericsson.com>

--- a/hw_config/intel/idf.yaml
+++ b/hw_config/intel/idf.yaml
@@ -24,18 +24,25 @@ idf:
       network: 10.10.191.0
       vlan: native
       mask: 24
-      bridge: br-name
+      dns:
+        - 8.8.8.8
   kubespray: &idf_kubespray
     nodes_roles:
-      node1: [k8s-cluster, kube-node, kube-master, etcd, vault]
+      node1: [k8s-cluster, kube-master, etcd, vault]
       node2: [k8s-cluster, kube-node]
+      node3: [k8s-cluster, kube-node]
+      node4: [k8s-cluster, kube-node]
+      node5: [k8s-cluster, kube-node]
     groups:
       k8s-cluster:
         - kube-node
         - kube-master
     hostnames:
-      node1: pod19-node1
-      node2: pod19-node2
+      node1: master1
+      node2: node1
+      node3: node2
+      node4: node3
+      node5: node4
     network:
       # network mapping
       network_mapping:
