Modify setup_network function to add support for Node 3-5
This change modifies setup_network function to add support
for configuring networking for pod 19 node 3,4 and 5.

Change-Id: I9cbdedfe57b86b0b64f96a51ede0ad7b2490d797
Signed-off-by: Rihab Banday <rihab.banday@ericsson.com>

--- a/deploy.env
+++ b/deploy.env
@@ -6,6 +6,9 @@ export INSTALLER=bmra
 # Name of host bridge to which the VM is connected to (used for PXE)
 export BRIDGE=pxebr
 
+# Upper limit of number nodes in RI2 cluster (starting from 0)
+export NODE_MAX_ID=$(($(yq r $CURRENTPATH/hw_config/$VENDOR/idf.yaml --length idf.kubespray.hostnames)-1))
+
 # Jump VM details
 export VM_NAME=$(yq r $CURRENTPATH/hw_config/$VENDOR/pdf.yaml jumphost.name)
 export USERNAME=ubuntu
