Added structure for OPNFV documentation
Having this structure in place is a requirement for passing release
milestone M2. This change does not modify the content of the
current documentation / deployment guide.

Signed-off-by: Georg Kunz <georg.kunz@ericsson.com>
Change-Id: I07e8820901970da1199f4a474161e49f25707ecc
Reviewed-on: https://gerrit.opnfv.org/gerrit/c/kuberef/+/71298
Tested-by: jenkins-ci <jenkins-opnfv-ci@opnfv.org>
Reviewed-by: Michael Pedersen <michaelx.pedersen@intel.com>
Reviewed-by: Sofia Wallin <sofia.wallin@est.tech>

--- a/tox.ini
+++ b/tox.ini
@@ -18,3 +18,14 @@ commands = bash -c "find {toxinidir} \
    bash -c "find {toxinidir} \
    -not -path {toxinidir}/.tox/\* \
    -name \*.rst | xargs rstcheck"
+
+[testenv:docs]
+deps = -rdocs/requirements.txt
+commands =
+    sphinx-build -b html -n -d {envtmpdir}/doctrees ./docs/ {toxinidir}/docs/_build/html
+    echo "Generated docs available in {toxinidir}/docs/_build/html"
+whitelist_externals = echo
+
+[testenv:docs-linkcheck]
+deps = -rdocs/requirements.txt
+commands = sphinx-build -b linkcheck -d {envtmpdir}/doctrees ./docs/ {toxinidir}/docs/_build/linkcheck
