Add support for deploying to Equinix Metal bare-metal servers
Adds an additional hw_config which is simplified (equinix-metal).
Adds support for skipping HW provisioning (pre-provisioned through EM).
Usage: deploy.sh [k8s]
Adds a few new helper functions, and updates existing to support changes.

Signed-off-by: Michael S. Pedersen <michaelx.pedersen@intel.com>
Change-Id: I2f84c662d183ba224e0edd8a218abe8b46c1fe45

--- a/inventory/group_vars/all/global.yaml
+++ b/inventory/group_vars/all/global.yaml
@@ -22,3 +22,6 @@ images_path: "{{ kuberef_root }}/images"
 
 # public SSH key for use by kuberef installation
 pub_key: "{{ lookup('env', 'HOME') }}/.ssh/id_rsa.pub"
+
+# deployment type for kuberef
+deployment_type: "{{ lookup('env', 'DEPLOYMENT') }}"
