--- a/deploy.env
+++ b/deploy.env
@@ -8,6 +8,17 @@ export BRIDGE=pxebr
 
 # Jump VM details
 export VM_NAME=$(yq r $CURRENTPATH/hw_config/$VENDOR/pdf.yaml jumphost.name)
-export USERNAME=ubuntu
-export PROJECT_ROOT="/home/ubuntu"
+if [[ "$DEPLOYMENT" == "full" ]]; then
+  export USERNAME=ubuntu
+  export PROJECT_ROOT="/home/ubuntu"
+elif [[ $DEPLOYMENT == "k8s" ]]; then
+  export USERNAME=root
+  export PROJECT_ROOT="/root"
+  export DEPENDENCIES="lshw pciutils ethtool"
+else
+  echo "ERROR: Invalid input variable"
+  echo "    Usage: $0 [k8s]"
+  exit 1
+fi
+export DEPLOYMENT="$DEPLOYMENT"
 export ROOT_PASSWORD="root" # This is used for throubleshooting purposes
