--- a/deploy.env
+++ b/deploy.env
@@ -3,11 +3,23 @@
 export VENDOR=${VENDOR:-ericsson-pod2}
 export INSTALLER=bmra
 
+# Deployment type. Supports "full" and "k8s"
+export DEPLOYMENT=${DEPLOYMENT}
+
 # Name of host bridge to which the VM is connected to (used for PXE)
 export BRIDGE=pxebr
 
 # Jump VM details
 export VM_NAME=$(yq r $CURRENTPATH/hw_config/$VENDOR/pdf.yaml jumphost.name)
-export USERNAME=ubuntu
-export PROJECT_ROOT="/home/ubuntu"
+if [[ "$DEPLOYMENT" == "full" ]]; then
+  export USERNAME=ubuntu
+  export PROJECT_ROOT="/home/ubuntu"
+elif [[ $DEPLOYMENT == "k8s" ]]; then
+  export USERNAME=root
+  export PROJECT_ROOT="/root"
+  export DEPENDENCIES="lshw pciutils ethtool"
+else
+  echo "ERROR: Invalid DEPLOYMENT value"
+  exit 1
+fi
 export ROOT_PASSWORD="root" # This is used for throubleshooting purposes
