Add support for deploying to Equinix Metal bare-metal servers
Adds an additional hw_config which is simplified (equinix-metal).
Adds support for skipping HW provisioning (pre-provisioned through EM).
Usage: deploy.sh [k8s]
Adds a few new helper functions, and updates existing to support changes.

Signed-off-by: Michael S. Pedersen <michaelx.pedersen@intel.com>
Signed-off-by: Victor Morales <v.morales@samsung.com>
Change-Id: I2f84c662d183ba224e0edd8a218abe8b46c1fe45
Signed-off-by: Victor Morales <v.morales@samsung.com>

--- a/deploy.env
+++ b/deploy.env
@@ -3,11 +3,14 @@
 export VENDOR=${VENDOR:-ericsson-pod2}
 export INSTALLER=bmra
 
+# Deployment type. Supports "full" and "k8s"
+export DEPLOYMENT=${DEPLOYMENT:-full}
+
 # Name of host bridge to which the VM is connected to (used for PXE)
 export BRIDGE=pxebr
 
 # Jump VM details
 export VM_NAME=$(yq r $CURRENTPATH/hw_config/$VENDOR/pdf.yaml jumphost.name)
-export USERNAME=ubuntu
-export PROJECT_ROOT="/home/ubuntu"
+export USERNAME=${USERNAME:-ubuntu}
+export PROJECT_ROOT="${PROJECT_ROOT:-/home/ubuntu}"
 export ROOT_PASSWORD="root" # This is used for throubleshooting purposes
