Update BMRA to v2.0
Also adds configuration of BMRA through the existing hw_config files (idf, pdf)
and better handling of dependencies.

Signed-off-by: Michael S. Pedersen <michaelx.pedersen@intel.com>
Change-Id: Iedaf249f01ea3e1e00c889e846e21644adff98c7
Reviewed-on: https://gerrit.opnfv.org/gerrit/c/kuberef/+/71504
Tested-by: jenkins-ci <jenkins-opnfv-ci@opnfv.org>
Reviewed-by: Rihab Banday <rihab.banday@ericsson.com>
Reviewed-by: Georg Kunz <georg.kunz@ericsson.com>

--- a/deploy.env
+++ b/deploy.env
@@ -2,6 +2,7 @@
 
 export VENDOR=${VENDOR:-ericsson-pod2}
 export INSTALLER=bmra
+export BMRA_PROFILE=$(yq r $CURRENTPATH/hw_config/$VENDOR/idf.yaml bmra.profile)
 
 # Deployment type. Supports "full" and "k8s"
 export DEPLOYMENT=${DEPLOYMENT:-full}
