--- a/hw_config/equinix-metal/idf.yaml
+++ b/hw_config/equinix-metal/idf.yaml
@@ -38,3 +38,44 @@ engine:
 
   installers:
     kubespray: *idf_kubespray
+
+bmra:
+  profile: full_nfv
+  network_roles:
+    sriov:
+      - name: eno2
+        bus_info: "19:00.1"
+        device_info: "8086:1572:0200"
+        driver: iavf
+    sriov_dpdk:
+      - name: eno4
+        bus_info: "19:00.3"
+        device_info: "8086:1572:0200"
+        driver: vfio-pci
+  features:
+    sriov:
+      enable: true
+      sriov_vfs_per_port: 2
+      sriov_dpdk_vfs_per_port: 4
+    sriov_cni: true
+    sriov_net_dp: true
+    hugepages:
+      enable: true
+      default: 2M
+      hugepages_1G: 0
+      hugepages_2M: 10240
+    isolcpus:
+      enable: true
+      cpus: "8-27,36-55"
+    nfd: true
+    cmk:
+      enable: true
+      num_shared_cores: 3
+      num_exclusive_cores: 3
+    topology_manager:
+      enable: true
+      policy: "best-effort"
+    tas:
+      enable: true
+      demo_policy: true
+    psp: true
