--- a/hw_config/intel/idf.yaml
+++ b/hw_config/intel/idf.yaml
@@ -67,3 +67,44 @@ engine:
 
   installers:
     kubespray: *idf_kubespray
+
+bmra:
+  profile: full_nfv
+  network_roles:
+    sriov:
+      - name: eth0
+        bus_info: "18:00.0"
+        device_info: "8086:158b:0200"
+        driver: vfio-pci
+    sriov_dpdk:
+      - name: eth1
+        bus_info: "18:00.1"
+        device_info: "8086:158b:0200"
+        driver: iavf
+  features:
+    sriov:
+      enable: true
+      sriov_vfs_per_port: 2
+      sriov_dpdk_vfs_per_port: 4
+    sriov_cni: true
+    sriov_net_dp: true
+    hugepages:
+      enable: true
+      default: 2M
+      hugepages_1G: 0
+      hugepages_2M: 10240
+    isolcpus:
+      enable: true
+      cpus: "4-19,24-39,44-59,64-79"
+    nfd: true
+    cmk:
+      enable: true
+      num_shared_cores: 3
+      num_exclusive_cores: 3
+    topology_manager:
+      enable: true
+      policy: "best-effort"
+    tas:
+      enable: true
+      demo_policy: true
+    psp: true
