Replace older BMRA docker image with new one & add changes for running it in CentOS 7
This change updates the Docker file of the BMRA
container & replaces the old image by the new one.
Additionally, it introduces changes needed to deploy
BMRA on CentOS 7.

Change-Id: I3f951bd147b457606719243d95fe48df14ecd449
Signed-off-by: Rihab Banday <rihab.banday@ericsson.com>

--- a/playbooks/roles/bmra-config/tasks/main.yaml
+++ b/playbooks/roles/bmra-config/tasks/main.yaml
@@ -4,6 +4,15 @@
     src: "inventory.j2"
     dest: "{{ kuberef_root }}/sw_config/bmra/inventory.ini"
 
+- name: Add Python 3 ansible interpreter for Equnix Metal (CentOS 8)
+        (will be added in the template directly after testing on CentOS 8 Baremetal)
+  blockinfile:
+    path: "{{ kuberef_root }}/sw_config/bmra/inventory.ini"
+    block: |
+      [all:vars]
+      ansible_python_interpreter=/usr/bin/python3
+  when: deployment_type == 'k8s'
+
 - name: Write BMRA kube-node config
   template:
     src: "kube-node.j2"
