--- a/sw_config/bmra/Dockerfile
+++ b/sw_config/bmra/Dockerfile
@@ -5,6 +5,7 @@ MAINTAINER "Rihab Banday <rihab.banday@ericsson.com>"
 RUN yum -y update && \
     yum -y install git epel-release python36 python-netaddr && \
     yum -y install python-pip && \
+    pip install pip==9.0.3 && \
     pip install ansible==2.9.6 jmespath && \
     pip install jinja2 --upgrade
 
