--- a/sw_config/bmra/Dockerfile
+++ b/sw_config/bmra/Dockerfile
@@ -5,8 +5,8 @@ MAINTAINER "Rihab Banday <rihab.banday@ericsson.com>"
 RUN yum -y update && \
     yum -y install git epel-release python36 python-netaddr && \
     yum -y install python-pip && \
-    pip install pip==9.0.3 && \
-    pip install ansible==2.9.6 jmespath && \
-    pip install jinja2 --upgrade
+    pip install --no-cache-dir pip==9.0.3 && \
+    pip install --no-cache-dir ansible==2.9.6 jmespath && \
+    pip install --no-cache-dir jinja2 --upgrade
 
 CMD ["bash"]
