Fix a set of issues with K8s deployment
[KUB-37] BMRA v2.0 fails to install on Centos 8.3
[KUB-38] [BMRA] Helm repo is unreachable
[KUB-39] [BMRA] CMK binary doesn't run on Centos 8
[KUB-40] [BMRA] CMK isn't installed on host
[KUB-41] [Equinix Metal] Unexpected GRUB settings on CentOS

Signed-off-by: Michael S. Pedersen <michaelx.pedersen@intel.com>
Change-Id: Ie7deb0517cda02352936420a9d36348238caa467

--- a/playbooks/roles/pre-install/tasks/main.yml
+++ b/playbooks/roles/pre-install/tasks/main.yml
@@ -44,3 +44,15 @@
   when:
     - not pybin.stat.exists
     - pypath.rc != 0
+
+- name: Fix /etc/default/grub (1/2)
+  replace:
+    path: /etc/default/grub
+    regexp: ''''
+    replace: '"'
+
+- name: Fix /etc/default/grub (2/2)
+  replace:
+    path: /etc/default/grub
+    regexp: 'export '
+    replace: ''
