Fixes issue with backing image format (https://libvirt.org/kbase/backing_chains.html#manual-image-creation)
Signed-off-by: Michael S. Pedersen <michaelx.pedersen@intel.com>
Change-Id: I6b0c39b7c4a4f20911e01014687a23c2c42a9e26
Reviewed-on: https://gerrit.opnfv.org/gerrit/c/kuberef/+/71841
Tested-by: jenkins-ci <jenkins-opnfv-ci@opnfv.org>
Reviewed-by: Rihab Banday <rihab.banday@ericsson.com>

--- a/playbooks/roles/jump-vm/tasks/main.yaml
+++ b/playbooks/roles/jump-vm/tasks/main.yaml
@@ -68,7 +68,7 @@
     mode: '0666'
 
 - name: create new VM image from base image
-  command: "qemu-img create -f qcow2 -o backing_file={{ images_path }}/bionic-server-cloudimg-amd64.img {{ workspace }}/{{ jumphost.name }}.qcow2 10G"
+  command: "qemu-img create -f qcow2 -F qcow2 -o backing_file={{ images_path }}/bionic-server-cloudimg-amd64.img {{ workspace }}/{{ jumphost.name }}.qcow2 10G"
 
 - name: render config files for jump VM from templates
   template:
