Add support for deployment on multiple OS distros
This patch introduces a variable to support
deployments on different OS distros.

Change-Id: I9cad126a57acbf662c4c97cfc5a275594f4d3f06
Signed-off-by: Rihab Banday <rihab.banday@ericsson.com>

--- a/deploy.env
+++ b/deploy.env
@@ -1,5 +1,6 @@
 # Define environment variables
 
+export DISTRO=${DISTRO:-centos7}
 export VENDOR=${VENDOR:-ericsson-pod2}
 export INSTALLER=bmra
 export BMRA_PROFILE=$(yq r $CURRENTPATH/hw_config/$VENDOR/idf.yaml bmra.profile)
