Update BMRA to v2.1
Updated Kuberef to use BMRA v2.1 instead of v2.0.
Removed a few workarounds used for BMRA v2.0.
Updated a few dependencies in deployment container.
Updated Kuberef templates for BMRA configuration.

Signed-off-by: Michael S. Pedersen <michaelx.pedersen@intel.com>
Change-Id: I091da09277ca9ecc0d3d7574dc3c4f000e73432d
Reviewed-on: https://gerrit.opnfv.org/gerrit/c/kuberef/+/72064
Tested-by: jenkins-ci <jenkins-opnfv-ci@opnfv.org>
Reviewed-by: Rihab Banday <rihab.banday@ericsson.com>

--- a/hw_config/intel/idf.yaml
+++ b/hw_config/intel/idf.yaml
@@ -106,5 +106,5 @@ bmra:
       policy: "best-effort"
     tas:
       enable: true
-      demo_policy: true
+      demo_policy: false
     psp: true
