--- a/deploy.env
+++ b/deploy.env
@@ -1,6 +1,6 @@
 # Define environment variables
 
-export VENDOR=${VENDOR:-ericsson-pod2}
+export VENDOR=${VENDOR:-intel}
 export INSTALLER=bmra
 export BMRA_PROFILE=$(yq r $CURRENTPATH/hw_config/$VENDOR/idf.yaml bmra.profile)
 
