--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -41,7 +41,7 @@ k8s_quick:
 
 k8s_smoke:
   tags:
-    - ericsson-pod2-docker
+    - intel-pod19-docker
   stage: functest-kubernetes-healthcheck
   image: opnfv/functest-kubernetes-healthcheck:v1.18
   script:
@@ -51,10 +51,9 @@ xrally_kubernetes:
   only:
     - schedules
   tags:
-    - ericsson-pod2-docker
+    - intel-pod19-docker
   stage: functest-kubernetes-smoke
   image: opnfv/functest-kubernetes-smoke:v1.18
-  timeout: 3 hours 30 minutes
   script:
     - run_tests -t xrally_kubernetes -p -r
 
@@ -62,18 +61,48 @@ k8s_conformance:
   only:
     - schedules
   tags:
-    - ericsson-pod2-docker
+    - intel-pod19-docker
   stage: functest-kubernetes-smoke
   image: opnfv/functest-kubernetes-smoke:v1.18
   timeout: 3 hours 30 minutes
   script:
     - run_tests -t k8s_conformance -p -r
 
+sig_network:
+  only:
+    - schedules
+  tags:
+    - intel-pod19-docker
+  stage: functest-kubernetes-smoke
+  image: opnfv/functest-kubernetes-smoke:v1.18
+  script:
+    - run_tests -t sig_network -p -r
+
+sig_network_features:
+  only:
+    - schedules
+  tags:
+    - intel-pod19-docker
+  stage: functest-kubernetes-smoke
+  image: opnfv/functest-kubernetes-smoke:v1.18
+  script:
+    - run_tests -t sig_network_features -p -r
+
+sig_storage:
+  only:
+    - schedules
+  tags:
+    - intel-pod19-docker
+  stage: functest-kubernetes-smoke
+  image: opnfv/functest-kubernetes-smoke:v1.18
+  script:
+    - run_tests -t sig_storage -p -r
+
 kube_hunter:
   only:
     - schedules
   tags:
-    - ericsson-pod2-docker
+    - intel-pod19-docker
   stage: functest-kubernetes-security
   image: opnfv/functest-kubernetes-security:v1.18
   script:
@@ -83,7 +112,7 @@ kube_bench_master:
   only:
     - schedules
   tags:
-    - ericsson-pod2-docker
+    - intel-pod19-docker
   stage: functest-kubernetes-security
   image: opnfv/functest-kubernetes-security:v1.18
   script:
@@ -93,7 +122,7 @@ kube_bench_node:
   only:
     - schedules
   tags:
-    - ericsson-pod2-docker
+    - intel-pod19-docker
   stage: functest-kubernetes-security
   image: opnfv/functest-kubernetes-security:v1.18
   script:
@@ -103,7 +132,7 @@ xrally_kubernetes_full:
   only:
     - schedules
   tags:
-    - ericsson-pod2-docker
+    - intel-pod19-docker
   stage: functest-kubernetes-benchmarking
   image: opnfv/functest-kubernetes-benchmarking:v1.18
   script:
@@ -113,7 +142,7 @@ k8s_vims:
   only:
     - schedules
   tags:
-    - ericsson-pod2-docker
+    - intel-pod19-docker
   stage: functest-kubernetes-cnf
   image: opnfv/functest-kubernetes-cnf:v1.18
   script:
@@ -123,7 +152,7 @@ helm_vims:
   only:
     - schedules
   tags:
-    - ericsson-pod2-docker
+    - intel-pod19-docker
   stage: functest-kubernetes-cnf
   image: opnfv/functest-kubernetes-cnf:v1.18
   script:
@@ -133,7 +162,7 @@ cnf_conformance:
   only:
     - schedules
   tags:
-    - ericsson-pod2-docker
+    - intel-pod19-docker
   stage: functest-kubernetes-cnf
   image: opnfv/functest-kubernetes-cnf:v1.18
   script:
@@ -143,7 +172,7 @@ zip:
   only:
     - schedules
   tags:
-    - intel-pod19-docker
+    - ericsson-pod2-docker
   stage: zip
   variables:
     S3_DST_URL: s3://artifacts.opnfv.org/kuberef/
