--- a/hw_config/ericsson-pod1/idf.yaml
+++ b/hw_config/ericsson-pod1/idf.yaml
@@ -18,7 +18,6 @@ idf:
       gateway: 10.0.20.1
       mask: 24
       dns:
-        - 192.168.1.200
         - 8.8.8.8
     public:
       interface: 1
@@ -27,19 +26,24 @@ idf:
       gateway: 100.64.200.1
       mask: 24
       dns:
-        - 192.168.1.200
         - 8.8.8.8
   kubespray: &idf_kubespray
     nodes_roles:
       node1: [k8s-cluster, kube-master, etcd, vault]
-      node2: [k8s-cluster, kube-node]
+      node2: [k8s-cluster, kube-master, etcd]
+      node3: [k8s-cluster, kube-master, etcd]
+      node4: [k8s-cluster, kube-node]
+      node5: [k8s-cluster, kube-node]
     groups:
       k8s-cluster:
         - kube-node
         - kube-master
     hostnames:
       node1: master1
-      node2: node1
+      node2: master2
+      node3: master3
+      node4: node1
+      node5: node2
     network:
       # network mapping
       network_mapping:
@@ -64,3 +68,43 @@ engine:
 
   installers:
     kubespray: *idf_kubespray
+bmra:
+  profile: full_nfv
+  network_roles:
+    sriov:
+      - name: eth2
+        bus_info: "05:00.0"
+        device_info: "8086:10f8:0200"
+        driver: vfio-pci
+    sriov_dpdk:
+      - name: eth3
+        bus_info: "05:00.1"
+        device_info: "8086:10f8:0200"
+        driver: vfio-pci
+  features:
+    sriov:
+      enable: false
+      sriov_vfs_per_port: 2
+      sriov_dpdk_vfs_per_port: 4
+    sriov_cni: false
+    sriov_net_dp: false
+    hugepages:
+      enable: false
+      default: 2M
+      hugepages_1G: 0
+      hugepages_2M: 10240
+    isolcpus:
+      enable: true
+      cpus: "4-9,14-19,24-29,34-39"
+    nfd: true
+    cmk:
+      enable: true
+      num_shared_cores: 3
+      num_exclusive_cores: 3
+    topology_manager:
+      enable: true
+      policy: "best-effort"
+    tas:
+      enable: true
+      demo_policy: false
+    psp: true
